tests/ui/variance/variance-associated-consts.stderr
error[E0208]: [o]
  --> $DIR/variance-associated-consts.rs:13:1
   |
LL | struct Foo<T: Trait> {
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0208`.
